fixed spacing and changed social links
ps shaun is a homo

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -16,19 +16,19 @@ body {
     font-family: 'Quicksand', sans-serif;
     font-size:50px;
     color:black;
-    margin-top: -5px;
+    margin-top: -10px;
 }
 
 .narsxisubtitle {
     font-family: 'Quicksand', sans-serif;
     font-size:25px;
     color:black;
-    margin-top: -20px;
+    margin-top: -30px;
 }
 
 .socials {
     text-align: center;
-    margin-top: -10px;
+    margin-top: -15px;
     margin-right: 38px;
     text-decoration: none;
  }
